--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %title= content_for?(:title) ? yield(:title) : "Marafiki"
+    %title= content_for?(:title) ? yield(:title) : "OpenEHR America"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
@@ -14,30 +14,24 @@
     = favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114'
     = favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72'
     = favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png'
-    = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
+    = favicon_link_tag 'favicon.png', :rel => 'shortcut icon'
     = javascript_include_tag "application"
 
   %body
     .navbar.navbar-default.navbar-fixed-top{:role => "navigation"}
       .container
         .navbar-header
-          = link_to "Marafiki", "/path3", :class => "navbar-brand"
+          = link_to "Electronich Record", "/path3", :class => "navbar-brand"
         .navbar-collapse.collapse
           %ul.nav.navbar-nav
+            %li= link_to "Design", "/path1"
+            %li= link_to "ISO Certification", "/path1"
             %li= link_to "Home", "/path1"
-            %li= link_to "Home", "/path1"
-            %li= link_to "Home", "/path1"
-            %li.dropdown
-              = link_to 'asdsad', "#", :class=>"dropdown-toggle", 'data-toggle'=>"dropdown"
-              %ul.dropdown-menu
-                %li= link_to "Home", "/path1"
-                %li= link_to "Home", "/path1"
-                %li= link_to "Home", "/path1"
-                %li.divider
+          
           %ul.nav.navbar-nav.navbar-right
             %li= link_to "Home", "/path1"
             %li= link_to "Home", "/path1"
-            %li= link_to "Home", "/path1"
+            %li= link_to "Contact", "/path1"
     
     .container-fluid
       .span9
