--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -1,26 +1,25 @@
 .container-fluid
   .jumbotron
-    %h1= 'Elechtronic Health Records'
+    %h1= 'Electronic Health Records'
     %p= 'Medical data in the long run'
-    %p= link_to 'Start here!', '#', :class =>"btn btn-primary btn-lg"
   .container
     .row
       .col-md-4
         = link_to(image_tag("/assets/cssapp/feat1.jpg", :class => "img-responsive img-circle"), "#")
-        %h3.class.text-center Solid Design
+        %h3.class.text-center Health Experts Design
         %p= 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean hendrerit quis augue sit amet mollis. Mauris id turpis diam. Ut pellentesque justo dolor, nec eleifend mauris euismod vitae. Morbi diam est, ornare non felis sit amet, elementum ultricies ante. Mauris id condimentum mauris. Nunc eleifend et enim eu sagittis. In congue, sapien nec vulputate pulvinar, tellus leo porttitor nibh, at rhoncus tellus lacus ac metus. Vestibulum pharetra scelerisque est sed tincidunt.'
-        = link_to "Book Now @ $599", "#", :class=>"btn btn-success"
+        = link_to "Read more", "#", :class=>"btn btn-success"
         
       .col-md-4
         = link_to(image_tag("/assets/cssapp/feat2.jpg", :class => "img-responsive img-circle"), "#")
         %h3.class.text-center Genetic Info 
         %p= 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean hendrerit quis augue sit amet mollis. Mauris id turpis diam. Ut pellentesque justo dolor, nec eleifend mauris euismod vitae. Morbi diam est, ornare non felis sit amet, elementum ultricies ante. Mauris id condimentum mauris. Nunc eleifend et enim eu sagittis. In congue, sapien nec vulputate pulvinar, tellus leo porttitor nibh, at rhoncus tellus lacus ac metus. Vestibulum pharetra scelerisque est sed tincidunt.'
-        = link_to("Book Now @ $899", "#", :class=>"btn btn-danger")
+        = link_to("Read more", "#", :class=>"btn btn-danger")
         
       .col-md-4
         = link_to(image_tag("/assets/cssapp/feat3.jpg", :class => "img-responsive img-circle"),"#")
         %h3.class.text-center Data in the Cloud
         %p= 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean hendrerit quis augue sit amet mollis. Mauris id turpis diam. Ut pellentesque justo dolor, nec eleifend mauris euismod vitae. Morbi diam est, ornare non felis sit amet, elementum ultricies ante. Mauris id condimentum mauris. Nunc eleifend et enim eu sagittis. In congue, sapien nec vulputate pulvinar, tellus leo porttitor nibh, at rhoncus tellus lacus ac metus. Vestibulum pharetra scelerisque est sed tincidunt.'
-        = link_to "Book Now @ $699", "#", :class=>"btn btn-info"  
+        = link_to "Read more", "#", :class=>"btn btn-info"  
 
 
