--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,8 +29,8 @@
             %li= link_to "Roadmap", "/path1"
           
           %ul.nav.navbar-nav.navbar-right
-            %li= link_to "Home", "/path1"
-            %li= link_to "Home", "/path1"
+            %li= link_to "FAQ", "/pages/faq"
+            %li= link_to "About US", "/path1"
             %li= link_to "Contact", "/path1"
     
     .container-fluid
