--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -1,7 +1,8 @@
 .container-fluid
   .jumbotron
     %h1= 'Electronic Health Records'
-    %p= 'Medical data in the long run'
+    %p= 'Comprehensive, life-long health records'
+
   .container
     .row
       .col-md-4
