--- a/app/views/pages/_form.html.haml
+++ b/app/views/pages/_form.html.haml
@@ -15,6 +15,11 @@
     = f.label :title
     %br/
     = f.text_field :title, size: 70
+
+  .field
+    = f.label :slug
+    %br/
+    = f.text_field :slug, size: 20
  
     %br/ 
     %br/
