--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -35,7 +35,7 @@
   = @page.created
 %p
   %b Section:
-  = @page.section
+  = @page.section.description
 
 = link_to 'Edit', edit_page_path(@page)
 \|
