--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -8,21 +8,21 @@
   .container
     .row
       .col-md-4
-        = link_to(image_tag("/assets/cssapp/feat1.jpg", :class => "img-responsive img-circle"), "#")
+        = link_to(image_tag('/assets/cssapp/feat1.jpg', :class => "img-responsive img-circle"), '/pages/view/start')
         %h3.class.text-center Health Experts Design
-        %p= 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean hendrerit quis augue sit amet mollis. Mauris id turpis diam. Ut pellentesque justo dolor, nec eleifend mauris euismod vitae. Morbi diam est, ornare non felis sit amet, elementum ultricies ante. Mauris id condimentum mauris. Nunc eleifend et enim eu sagittis. In congue, sapien nec vulputate pulvinar, tellus leo porttitor nibh, at rhoncus tellus lacus ac metus. Vestibulum pharetra scelerisque est sed tincidunt.'
+        %p= "Some doctors complain that the electronic systems are clunky and time-consuming, designed more for bureaucrats than physicians. Last month, for example, the public health system in Contra Costa County in California slowed to a crawl under a new information-technology system. Doctors told county supervisors they were able to see only half as many patients as usual as they struggled with the unfamiliar screens and clicks. Nurses had similar concerns. At the county jail, they said, a mistaken order for a high dose of a dangerous heart medicine was caught just in time."
         = link_to 'Read more', '/pages/view/start', :class=>"btn btn-info"
         
       .col-md-4
         = link_to(image_tag("/assets/cssapp/feat2.jpg", :class => "img-responsive img-circle"), "#")
-        %h3.class.text-center Genetic Info 
-        %p= 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean hendrerit quis augue sit amet mollis. Mauris id turpis diam. Ut pellentesque justo dolor, nec eleifend mauris euismod vitae. Morbi diam est, ornare non felis sit amet, elementum ultricies ante. Mauris id condimentum mauris. Nunc eleifend et enim eu sagittis. In congue, sapien nec vulputate pulvinar, tellus leo porttitor nibh, at rhoncus tellus lacus ac metus. Vestibulum pharetra scelerisque est sed tincidunt.'
+        %h3.class.text-center Handling Genetic Profiles 
+        %p= "The combination of improved genomic analysis methods, decreasing genotyping costs, and increasing computing resources has led to an explosion of clinical genomic knowledge in the last decade. Similarly, healthcare systems are increasingly adopting robust electronic health record (EHR) systems that not only can improve health care, but also contain a vast repository of disease and treatment data that could be mined for genomic research."
         = link_to("Read more", '/pages/view/start', :class=>"btn btn-info")
         
       .col-md-4
         = link_to(image_tag("/assets/cssapp/feat3.jpg", :class => "img-responsive img-circle"),"#")
         %h3.class.text-center Data in the Cloud
-        %p= 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean hendrerit quis augue sit amet mollis. Mauris id turpis diam. Ut pellentesque justo dolor, nec eleifend mauris euismod vitae. Morbi diam est, ornare non felis sit amet, elementum ultricies ante. Mauris id condimentum mauris. Nunc eleifend et enim eu sagittis. In congue, sapien nec vulputate pulvinar, tellus leo porttitor nibh, at rhoncus tellus lacus ac metus. Vestibulum pharetra scelerisque est sed tincidunt.'
+        %p= "The Cloud eliminates the need for each hospital to invest in stand-alone servers or software that is capital intensive, but under-utilized most of the time. As technological innovations take place, these resources become obsolete and must be replaced with the latest in order to ensure operational efficiency – requiring more capital investment – and the cycle repeats. The Cloud eliminates the need for such ‘replacement’ capital expenditure. "
         = link_to 'Read more', '/pages/view/start', :class=>"btn btn-info"  
 
 
