--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -14,15 +14,15 @@
         = link_to 'Read more', '/pages/view/start', :class=>"btn btn-info"
         
       .col-md-4
-        = link_to(image_tag("/assets/cssapp/feat2.jpg", :class => "img-responsive img-circle"), "#")
+        = link_to(image_tag("/assets/cssapp/feat2.jpg", :class => "img-responsive img-circle"), "/pages/view/start")
         %h3.class.text-center Handling Genetic Profiles 
         %p= "The combination of improved genomic analysis methods, decreasing genotyping costs, and increasing computing resources has led to an explosion of clinical genomic knowledge in the last decade. Similarly, healthcare systems are increasingly adopting robust electronic health record (EHR) systems that not only can improve health care, but also contain a vast repository of disease and treatment data that could be mined for genomic research."
         = link_to("Read more", '/pages/view/start', :class=>"btn btn-info")
         
       .col-md-4
-        = link_to(image_tag("/assets/cssapp/feat3.jpg", :class => "img-responsive img-circle"),"#")
+        = link_to(image_tag("/assets/cssapp/feat3.jpg", :class => 'img-responsive img-circle'),"/pages/view/start")
         %h3.class.text-center Data in the Cloud
         %p= "The Cloud eliminates the need for each hospital to invest in stand-alone servers or software that is capital intensive, but under-utilized most of the time. As technological innovations take place, these resources become obsolete and must be replaced with the latest in order to ensure operational efficiency – requiring more capital investment – and the cycle repeats. The Cloud eliminates the need for such ‘replacement’ capital expenditure. "
-        = link_to 'Read more', '/pages/view/start', :class=>"btn btn-info"  
+        = link_to 'Read more', '/pages/view/start', :class => 'btn btn-info'
 
 
