--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -39,3 +39,8 @@ table.gridtable td {
     border-color: #666666;
     background-color: #ffffff;
 }
+
+.contenido{
+  margin:30px;
+  padding:17px;
+}
