--- a/app/views/images/_form.html.haml
+++ b/app/views/images/_form.html.haml
@@ -1,16 +1,26 @@
-= form_for @image do |f|
+= javascript_include_tag :jquniformmin
+= stylesheet_link_tag  'juthemes/default/css/uniform.default'
+
+= form_for(@image, {:html => {:class => "niceform"}}) do |f|
   - if @image.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@image.errors.count, "error")} prohibited this image from being saved:"
+      %h2
+        = pluralize(@image.errors.count, "error")
+        prohibited this image from being saved:
       %ul
         - @image.errors.full_messages.each do |msg|
           %li= msg
-
   .field
     = f.label :file
-    = f.text_field :file
-  .field
-    = f.label :user
-    = f.text_field :user
+    %br/
+    = f.file_field :file
+
   .actions
-    = f.submit 'Save'
+    = f.submit
+
+:javascript
+    $(document).ready(function () {
+    // Style everything
+    $("select, input,  button").uniform();
+    });
+
