--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,9 +33,9 @@
             = link_to 'Login', '/users/sign_in', :class=>'btn btn-sm btn-success'
           
           %ul.nav.navbar-nav.navbar-right
-            %li= link_to "FAQ", "/pages/faq"
-            %li= link_to "About US", "/pages/about"
-            %li= link_to "Contact", "/pages/contact"
+            %li= link_to "FAQ", "/pages/view/faq"
+            %li= link_to "About US", "/pages/view/about"
+            %li= link_to "Contact", "/pages/view/contact"
 
     = content_tag :p, '&nbsp;', :style => 'margin-top:16px;'
     .container-fluid
